# cli_config_manager

./: README.md  input.yaml  pyproject.toml  requirements.txt  verify_versions.py
resources/: Pydantic 2.6.1 安装踩坑记录.md  cli_configl_manager踩坑记录.md  python语法.md  常用Prompt.md
resources/package_说明/: Type.md  pydantic.md
src/cli_config_manager/: main.py  models.py  processor.py
